--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,8 @@ encoding//app/auth/__init__.py=utf-8
 encoding//app/auth/forms.py=utf-8
 encoding//app/decorators.py=utf-8
 encoding//app/email.py=utf-8
+encoding//app/main/errors.py=utf-8
+encoding//app/main/forms.py=utf-8
 encoding//app/models/account.py=utf-8
 encoding//app/models/post.py=utf-8
 encoding//app/post/__init__.py=utf-8
