--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//app/admin_manager/forms.py=utf-8
 encoding//app/admin_manager/views.py=utf-8
 encoding//app/auth/__init__.py=utf-8
 encoding//app/auth/forms.py=utf-8
+encoding//app/auth/views.py=utf-8
 encoding//app/decorators.py=utf-8
 encoding//app/email.py=utf-8
 encoding//app/main/errors.py=utf-8
