--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+Click==7.0
 Flask==1.1.1
+flask-simplelogin==0.0.6
+Flask-WTF==0.14.2
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 Werkzeug==0.15.5
+WTForms==2.2.1
